--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: Alberto Gómez-Martín
 title: Localization Engineer transitioning to Software Engineer
 email: agomezmartinpro@gmail.com
 teléfono: +34 665042685
-website: https://github.com/agomezmartin/internationalization
+website: https://agomezmartin.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
