--- a/_config.yml
+++ b/_config.yml
@@ -281,7 +281,7 @@ content:
       - layout: top-middle
         title: Django application - DB (client creation)
         link: github.com/agomezmartin/
-        link_text: https://github.com/agomezmartin/internationalization/tree/main/assets/_projects/django/WebSite_MODAL_FORM_DB_i18n
+        link_text: https://github.com/agomezmartin/internationalization/blob/main/assets/_projects/django/WebSite_MODAL_FORM_DB_i18n/project/create_app/templates/index.html
         additional_links:
           - title:  agomezmartin
             icon: fab fa-github
