--- a/_config.yml
+++ b/_config.yml
@@ -306,7 +306,7 @@ content:
       <img src="/images/jira.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/django.png" width="20%" height="20%" style="margin-bottom:5%">
       <img src="/images/mysql.png" width="20%" height="10%" style="margin-bottom:5%">
-#      <img src="/images/bootstrap.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
+      <img src="/images/bootstrap.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
       <img src="/images/angular.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/java_ee.png" width="20%" height="10%" style="margin-bottom:5%">
 #      <img src="/images/rest_api.png" width="20%" height="10%" style="margin-bottom:5%">
