--- a/_config.yml
+++ b/_config.yml
@@ -49,12 +49,12 @@ linkedin_username: albertogomezmartin
 # about_title: About Me
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
-    Originally a Spanish national, I have lived in London for over a decade where I carried out both my studies and the onset of my professional career.
+	Originally a Spanish national, I have lived in London for over a decade where I carried out both my studies and the onset of my professional career.
     
-    As a professional, I have developed mainly at global <mark>Language Service Providers</mark> (LSP) working as a <mark>Localization Engineer</mark>. Although coming from a translation-educated background, this position has enabled me to work hand-in-hand in the same department with IT-educated professionals where we came up together with solutions to streamline and scale the localization processes of our clients' software products.
-    
-    After having spent more than <mark>six years</mark> in the localization industry helping software clients localize (translate) their products, I am now ready to move to the client side and be able to develop internationalization architectures along with all other development aspects of the cycle.
-
+	As a professional, I have developed mainly at global <mark>Language Service Providers</mark> (LSP) working as a <mark>Localization Engineer</mark>. Over the years I have being able to prepare for translation a wide range of file formats into several Computer Assisted Tools, both desktop-based (Wordfast, MemoQ, or SDL Trados) and web-based (XTM). Familiar with the full Microsoft 365 suit, and e-learning apps, but what I love the most is preparing and engineering software-related plaint text files as this implies creating and developing parsers with fine-tuned regular expressions.
+	
+	Currently working as a software developer in Madrid, Spain but would consider an attractive relocation package.
+ 
 content:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
