--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ about_content: | # this will include new lines to allow paragraphs
    
     As a professional, I have developed mainly at global <mark>Language Service Providers</mark> (LSP) working as a <mark>Localization Engineer</mark>. Over the years I have being able to prepare for translation a wide range of file formats into several Computer Assisted Tools, both <mark>desktop-based</mark> (Wordfast, MemoQ, or SDL Trados) and <mark>web-based</mark> (XTM). Also, I have been involved in <mark>migrations</mark> into web-based TMSs.
     
-    Familiar with the full Microsoft 365 suit, and e-learning apps, but what I love the most is preparing and engineering software-related plaint text files as it involves creating and developing parsers as well as fine-tuning regular expressions.
+    Familiar with the full Microsoft 365 suit, and e-learning apps, but what I love the most is preparing and engineering software-related plaint text files as it involves creating and developing parsers as well as fine-tuning <mark>regular expressions</mark>. On the techy side, I can work with macros in <mark>VBA</mark> to automate file prepp tasks for translation purposes in Excel, console-executed Python <mark>scripts</mark> and .BATs. 
 
     Currently working as a software developer in Madrid, Spain but would consider a relocation package.
 content:
