--- a/_config.yml
+++ b/_config.yml
@@ -319,7 +319,7 @@ content:
       <img src="/images/mysql.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/bootstrap.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
       <img src="/images/angular.png" width="20%" height="10%" style="margin-bottom:5%">
-      <img src="/images/java_ee.png" width="20%" height="10%" style="margin-bottom:5%">
+      <img src="/images/c_sharp.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/rest_api.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/linux.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
       <img src="/images/windows.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
