--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ about_content: | # this will include new lines to allow paragraphs
     
     As a professional, I have developed mainly at global <mark>Language Service Providers</mark> (LSP) working as a <mark>Localization Engineer</mark>. Although coming from a translation-educated background, this position has enabled me to work hand-in-hand in the same department with IT-educated professionals where we came up together with solutions to streamline and scale the localization processes of our clients' software products.
     
-    After having spent more than <mark>six years</mark> in the localization industry helping software clients localize (translate) their products, I am currently working as a Software Engineer for an Energy sector software company using <mark>C#</mark> and <mark>VBA</mark> programming languages.
+    After having spent more than <mark>six years</mark> in the localization industry helping software clients localize (translate) their products, I am currently working as a <mark>Software Engineer</mark> for an Energy sector software company using <mark>C#</mark> and <mark>VBA</mark> programming languages.
 
 content:
 
