--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Alberto Gómez-Martín
-title: Localization Engineer transitioning to Software Engineer
+title: Localization and Software Engineer
 email: agomezmartinpro@gmail.com
 teléfono: +34 665042685
 website: https://agomezmartin.github.io/
