--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,12 @@ content:
 
           Design, develop, and maintain software solutions to support energy tools software.
           Contribute to the definition of prospective products and services based on both C# and VBA.
+          
+            - Entity Framework: entity mapper
+            - LINQ
+            - ADO
 
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
+        # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
       - layout: left
         title: ACOLAD
