--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ content:
           Design, develop, and maintain software solutions to support energy tools software.
           Contribute to the definition of prospective products and services based on both C# and VBA.
           
-            - Entity Framework: entity mapper
+            - Entity Framework
             - LINQ
             - ADO
 
