--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ teléfono: +34 665042685
 website: https://agomezmartin.github.io/
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: never
 
 # Social links
 # twitter_username: facespics
