--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ content:
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
       - layout: left
-        title: Inforyde
+        title: Invesyde
         link: https://inforyde.com/
         link_text: inforyde.com
         sub_title: Junior Software Engineer
@@ -85,6 +85,8 @@ content:
             - Entity Framework
             - LINQ
             - ADO
+            
+          Version control with Git and GitHub on Windows command line. Ticket requests on Jira.
 
         # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
@@ -101,7 +103,7 @@ content:
           <mark>Technical project management</mark>
             - Asessing, and analizing from the technical side clients' products.
             - Quotes
-            - Technical vendor management
+            - Technical vendor management and documentation on Confluence
 
           <mark>Localization Engineering</mark>
             - File preparation for CAT processing
@@ -315,11 +317,12 @@ content:
     layout: text
     content: | # this will include new lines to allow paragraphs
 
+      <img src="/images/c_sharp.png" width="20%" height="10%" style="margin-bottom:5%">
+      <img src="/images/jira.png" width="20%" height="10%" style="margin-bottom:5%">
+      <img src="/images/github.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/total_commander.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
       <img src="/images/emeditor.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/regex.jpeg" width="20%" height="10%" style="margin-bottom:5%">
-      <img src="/images/c_sharp.png" width="20%" height="10%" style="margin-bottom:5%">
-      <img src="/images/jira.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/django.png" width="20%" height="20%" style="margin-bottom:5%">
       <img src="/images/mysql.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/bootstrap.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
